Custom style for buttons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="input-group">
           <div class="input-label"></div>
-          <div class="input-control"><button data-bind='click: connect.bind($data)'>Connect</button></div>
+          <div class="input-control"><button class='btn-blue' data-bind='click: connect.bind($data)'>Connect</button></div>
         </div>
       </form>
     </div>
