Streamline client code, provision objects
Remove duplicate code from login and signup
Automatically generate certain needed objects

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="input-group" data-bind="visible: !register">
           <div class="input-label"></div>
-          <div class="input-control"><button class='btn-blue' data-bind='click: connect.bind($data)'>Login</button></div>
+          <div class="input-control"><button class='btn-blue' data-bind='click: login.bind($data)'>Login</button></div>
         </div>
         <div class="input-group" data-bind="visible: register">
           <div class="input-label"></div>
