--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <link rel='stylesheet' href='css/global.css'></link>
+<script type='text/javascript' src='js/es5/jquery-2.1.1.js'></script>
 <script type='text/javascript' src='js/es5/knockout.js'></script>
 <script type='text/javascript' src='js/es5/knockout-es5.js'></script>
 <script type='text/javascript' src='js/es5/ko/imgSrc.js'></script>
+<script type='text/javascript' src='js/es5/ko/dnd.js'></script>
+<script type='text/javascript' src='js/es5/ko/contenteditable.js'></script>
 <script type='text/javascript' src='js/traceur.js'></script>
 <script type='text/javascript' src='js/es6-module-loader.js'></script>
 <script type='text/javascript' src='js/system.js'></script>
