Increase width of post, add creation time

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script type='text/javascript' src='js/es5/ko/imgSrc.js'></script>
 <script type='text/javascript' src='js/es5/ko/dnd.js'></script>
 <script type='text/javascript' src='js/es5/ko/contenteditable.js'></script>
+<script type='text/javascript' src='js/es5/ko/time-helper.js'></script>
 <script type='text/javascript' src='js/traceur.js'></script>
 <script type='text/javascript' src='js/es6-module-loader.js'></script>
 <script type='text/javascript' src='js/system.js'></script>
